data/derived/fa15/progs/unify/prog0949.ml.out
Characters 76-77:
  | h::t -> (h, l2) :: helper(t l2);;
                              ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
